# PitikappPluginLibrary

./: .gitignore  LICENSE  README.md
example/: CMakeLists.txt  PitikappExamplePlugin.cpp  PitikappExamplePlugin.h  PitikappExamplePlugin.pro  resources.qrc
example/ModuleCounter/: ModuleCounter.cpp  ModuleCounter.h
example/ModuleCustomCounter/: ModuleCustomCounter.cpp  ModuleCustomCounter.h  ModuleCustomCounterData.cpp  ModuleCustomCounterData.h
example/ModuleDiskUsage/: ModuleDiskUsage.cpp  ModuleDiskUsage.h
example/ModuleProcessRunTime/: ModuleProcessRunTime.cpp  ModuleProcessRunTime.h  ModuleProcessRunTimeData.cpp  ModuleProcessRunTimeData.h  ProcessSelectionHelper.cpp  ProcessSelectionHelper.h
example/com.pitikapp.plugins.example.resources/Module-CustomCounter/: Parameters.qml
example/com.pitikapp.plugins.example.resources/Module-ProcessRunTime/: Data.qml  Parameters.qml
lib/: PitikappModuleDataInfo.h  PitikappModuleInfo.h  PitikappModuleInstance.h  PitikappModuleInstanceData.h  PitikappModuleInstanceDataPicker.h  PitikappModuleInstanceGaugeData.h  PitikappPlugin.h  PitikappPluginLibrary.pri  pitikappPlugin.lib  pluginlib_global.h
